# gif_process

./: CMakeLists.txt  README.md  main.cpp
